--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "joi-browser": "^13.4.0",
+    "node-cron": "^2.0.3",
+    "query-string": "^6.13.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-toastify": "^6.1.0",
